# swetest

./: .env  Pipfile  README.md  installer.cfg  main.py  pyproject.toml  requirements.txt  setup.py
ephemeris/: swetest
examples/: example.py  swetest_examples.py
swetest/: __main__.py  swetest.py
swetest.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
swetest/exceptions/: swetestexception.py
swetest/modules/: swetest.py
tests/: test_swetest.py  test_utils.py
